K8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geeksprofile
  labels:
    app: geeksprofile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geeksprofile
  template:
    metadata:
      labels:
        app: geeksprofile
    spec:
      containers:
        - name: geeksprofile
          image: fares111/geeksprofile:geeksprofile
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: geeksprofile-service
spec:
  type: ClusterIP
  selector:
    app: geeksprofile
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /geeksprofile
            pathType: Prefix
            backend:
              service:
                name: geeksprofile-service
                port:
                  number: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql:5.7
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d
            - name: mysql-pvc
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-init
          configMap:
            name: config
        - name: mysql-pvc
          persistentVolumeClaim:
            claimName: mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
